test/corpus/test.txt
=======
VALID - object w/ symbols
=======

{
    foo:bar
}

---

(document
 (struct
  (pair
   (key
     (identifier))
   (symbol
    (identifier)))))

=======
VALID - random
=======

123
foo
'bar'
"baz"
huh::"bar"
2024-01-20
{
    foo:bar,
    baz:{"with spaces":123.45},
}

---

(document
  (number)
  (symbol
  (identifier))
  (symbol)
  (string)
  (annotated_value
  (identifier)
  (string))
  (timestamp)
  (struct
  (pair
    (key
      (identifier))
    (symbol
      (identifier)))
  (pair
    (key
      (identifier))
    (struct
      (pair
        (key
          (string))
        (number))))))

